--- a/src/app/shared/add-item-to-invoice/add-item-to-invoice.component.css
+++ b/src/app/shared/add-item-to-invoice/add-item-to-invoice.component.css
@@ -12,5 +12,35 @@ mat-label {
   color: black;
   font-size: 12px;
   font-family:'Karla';
+}
 
+.addService {
+  width: 400px;
+   background-color: #ffffff;
+
+}
+
+::ng-deep.mat-dialog-container {
+  padding: 0px !important;
+  background-color: #ffffff;
+}
+
+.btn-primary, .btn-dialog-cancel {
+  border-radius: 0;
+}
+
+.btn-primary {
+  color: white;
+}
+
+
+.addServiceTitle {
+  background-color: #5b5b5b;
+  padding: 9px;
+  padding-left: 17px;
+}
+
+mat-form-field {
+  margin-left: 13px;
+  margin-right: 13px;
 }
