Create user address line 2

--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -91,6 +91,9 @@
                 <mat-form-field fxFlex appearance="fill" style="margin-right: 5px; margin-top: 15px;">
                   <mat-label>Phone Number *</mat-label>
                   <input matInput [formControl]="contactForm.controls['phoneNumber']"
+                  [textMask]="{mask: phoneMask}"
+                  placeholder="(555)555-5555"
+                  type="tel"
                   />
                   <mat-error class="input-error" *ngIf="contactForm.controls['phoneNumber'].hasError('required') && contactForm.controls['phoneNumber'].touched">
                     Phone Number Is A Required Field
