--- a/src/app/shared/invoice-dialog/invoice-dialog.component.html
+++ b/src/app/shared/invoice-dialog/invoice-dialog.component.html
@@ -8,58 +8,59 @@
 
 <div fxLayout="column">
 
-  <div style="text-align: right">
-  <button mat-icon-button matDialogClose="cancel">
+  <div style="text-align: right; background-color: #ffffff; padding: 10px;">
+  <button mat-icon-button matDialogClose="cancel" style="color:#568e67;">
     <mat-icon>close</mat-icon>
   </button>
   </div>
 
-  <mat-card style="box-shadow: none;">
+  <mat-card style="box-shadow: none; background-color: #ffffff; padding-left: 35px;
+  padding-right: 35px; padding-bottom: 35px;">
 
-    <mat-card-title>Invoice Summary</mat-card-title>
+    <mat-card-title class="title-invoice">Invoice Summary</mat-card-title>
     <mat-card-subtitle><p style="margin-top:12px">Date: {{ date }}</p> </mat-card-subtitle>
 
-    <mat-card-content style="max-height: 250px; overflow-y: auto;">
-
-      <div fxLayout="row" fxLayoutAlign="space-between" style="margin-top:5%">
-
-        <div>
-
-          <p>Parts Total: {{ partsAmount | currency }}</p>
-          <p>Labor Total: {{ laborAmount | currency }}</p>
-        </div>
-      </div>
+    <mat-card-content style="overflow-y: auto;">
 
       <!-- Line Items Table -->
       <div *ngIf="lineItems.length > 0">
-        <table mat-table [dataSource]="lineItems" style="width: 100%;">
+        <table mat-table [dataSource]="lineItems" style="width: 100%; margin-top: 13px;">
 
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Name</th>
-            <td mat-cell *matCellDef="let item">{{ item.serviceName }}</td>
+            <td mat-cell *matCellDef="let item">{{ item.title }}</td>
           </ng-container>
           <ng-container matColumnDef="price">
             <th mat-header-cell *matHeaderCellDef>Cost</th>
             <td mat-cell *matCellDef="let item">{{ item.price | currency}}</td>
           </ng-container>
-
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
         </table>
       </div>
 
+      <div class="fees-div">
+        <table style="width: 100%;">
+          <tr>
+            <td style="width: 75%;"><p style="margin-bottom: 3px; margin-top: 7px; padding-left: 5px;">Parts Total:</p></td>
+            <td style="width: 16%;"><p style="margin-bottom: 3px; margin-top: 7px; width: 16%;">{{ partsAmount | currency }}</p></td>
+          </tr>
+          <tr>
+            <td style="width: 75%;"><p style="margin-bottom: 3px; padding-left: 5px;">Labor Total:</p></td>
+            <td style="width: 16%;"><p style="margin-bottom: 3px;">{{ laborAmount | currency }}</p></td>
+          </tr>
+        </table>
+        <br>
+        <h2 style="color:#568e67; float:right; display:block">Total: {{ total | currency }}</h2>
+      </div>
     </mat-card-content>
 
     <mat-divider></mat-divider>
     <br>
 
-    <div fxLayout="row" fxLayoutAlign="space-between">
-      <div fxLayoutGap="15px">
-
+    <div style="display: block;">
         <!-- Print invoice -->
-        <button mat-raised-button type="button" (click)="printInvoice()" color="accent">Print</button>
-      </div>
-      <h2>Total: {{ total | currency }}</h2>
+        <button mat-raised-button type="button" (click)="printInvoice()" class="btn-primary" style="float: right;">Print Invoice</button>
     </div>
   </mat-card>
 </div>
