--- a/src/app/shared/base-layout/base-layout.component.css
+++ b/src/app/shared/base-layout/base-layout.component.css
@@ -49,9 +49,9 @@
     text-decoration: underline;
   }
 
-  .main-content {
+  /* .main-content {
     padding-left: 30px;
-  }
+  } */
 
   .footer-content {
    padding: 10px
