--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,16 @@
 <!--
     Title: index.html
-    Date: 04 April 2022
+    Date: 10 May 2022
     Authors: Evan Durkin, Keith Hall,
     Gustavo Roo Gonzalez, and Gunner Bradley
     Description: Html file for the home component.
 -->
 
-<div fxLayout="column" class="main-welcome">
+<div fxLayout="column" class="home">
+  <div class="home-message">
+    <h1 class="home-text">Repair services for smartphones, <br>laptops, tablets and more!</h1>
+    <div class="btn-estimate">
+      <button mat-flat-button class="btn-primary" [routerLink]="['/guest-services']">Get a Free Estimate</button>
+    </div>
+  </div>
 
-</div>
