--- a/src/app/shared/standard-layout/standard-layout.component.html
+++ b/src/app/shared/standard-layout/standard-layout.component.html
@@ -18,7 +18,7 @@
         <a routerLink="/" class="logo-navbar">Bob's <br/> Computer Repair Shop</a>
         <title class="dashboard-header">employee dashboard</title>
         <a [matMenuTriggerFor]="profileMenu"
-        aria-label="User Profile Menu" style="font-size: 16px; float: right; font-family: 'karla', sans-serif;">{{ userName }} <mat-icon style="font-size: 18px;">perm_identity</mat-icon>
+        aria-label="User Profile Menu" style="font-size: 16px; float: right; font-family: 'karla', sans-serif;cursor:pointer">{{ userName }} <mat-icon style="font-size: 24px;">perm_identity</mat-icon>
           <!-- Icon drop down menu items -->
           <mat-menu #profileMenu="matMenu">
             <p style="padding: 10px; padding-right: 25px; color:white;" class="menu">
