--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -18,7 +18,6 @@
   padding: 175px 0px;
   font-size: 65px;
   line-height: 1em;
-  border-right: 10px solid #393939;
   letter-spacing: -3pt;
 }
 
@@ -41,4 +40,6 @@
 
 .about-main-body {
   margin-left: 4em;
+  border-left: 10px solid #393939;
+  padding-left: 6em;
 }
