adding guest services page styling

--- a/src/app/pages/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/pages/dashboard-admin/dashboard-admin.component.html
@@ -3,7 +3,7 @@
     Date: 22 April 2022
     Authors: Evan Durkin, Keith Hall,
     Gustavo Roo Gonzalez, and Gunner Bradley
-    Description: Html file for th base-layout component.
+    Description: Html file for the dashboard admin component.
 -->
 
 <div fxLayout="column">
