--- a/src/app/pages/services-graph/services-graph.component.html
+++ b/src/app/pages/services-graph/services-graph.component.html
@@ -1,3 +1,11 @@
+<!--
+// Title: Bob’s Computer Repair Shop
+// Date: 11 May 2022
+// Authors: Evan Durkin, Keith Hall,
+// Gustavo Roo Gonzalez, and Gunner Bradley
+// Description: Services Graph Component
+-->
+
 <h1 style="text-align: center">Purchases by Service</h1>
 <div class="pie">
   <p-chart type="pie" [data]="data"></p-chart>
