--- a/src/app/pages/guest-services/guest-services.component.html
+++ b/src/app/pages/guest-services/guest-services.component.html
@@ -1,1 +1,110 @@
-<p>guest-services works!</p>
+<!--
+    Title: dashboard-employee.component.html
+    Date: 11 May 2022
+    Authors: Evan Durkin, Keith Hall,
+    Gustavo Roo Gonzalez, and Gunner Bradley
+    Description: Html file for the dashboard-employee component.
+-->
+
+<div fxLayout="column" fxFlex="100%" class="main-welcome">
+  <p-toast></p-toast>
+
+  <div class="guest-services-header">
+    <h1 style="font-family: 'Karla', sans-serif;">Get a Free Quote for our Available Services</h1>
+  </div>
+  <div
+    style="padding-bottom: -20px"
+    fxLayout="row"
+    fxLayoutAlign="center"
+    style="width: 100%"
+  >
+    <div class="btn-div">
+      <h2 class="title-service">Services</h2>
+      <h4 class="subtitle-service">select a service</h4>
+
+      <!-- Buttons -->
+      <div
+        class="btn-service"
+        *ngFor="let item of lineItems; let i = index"
+        (click)="addToInvoice(item.title, item.price)"
+      >
+        +&nbsp; {{ item.title }}
+        <!-- Product and price columns -->
+      </div>
+    </div>
+
+    <!-- Right side -->
+    <div fxFlex="60%" fxLayout="column" fxLayoutAlign="space-between">
+      <div>
+        <!-- Data table-->
+        <mat-card fxFlex style="background-color: #ffffff">
+          <mat-card-content>
+            <table
+              #table
+              mat-table
+              [dataSource]="dataTableSource"
+              style="width: 100%"
+            >
+              <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef>Name</th>
+                <td mat-cell *matCellDef="let item">{{ item.title }}</td>
+              </ng-container>
+              <ng-container matColumnDef="price">
+                <th mat-header-cell *matHeaderCellDef style="width: 80px">
+                  Cost
+                </th>
+                <td mat-cell *matCellDef="let item" style="width: 80px">
+                  {{ item.price | currency }}
+                </td>
+              </ng-container>
+              <ng-container matColumnDef="functions">
+                <th mat-header-cell *matHeaderCellDef></th>
+                <td
+                  mat-cell
+                  *matCellDef="let item; let i = index"
+                  style="width: 20px"
+                >
+                  <button mat-icon-button>
+                    <mat-icon
+                      color="primary"
+                      (click)="
+                        deleteFromInvoice(
+                          i,
+                          item.title,
+                          item.price,
+                          item.parts,
+                          item.hours
+                        )
+                      "
+                      >delete</mat-icon
+                    >
+                  </button>
+                </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+            </table>
+          </mat-card-content>
+        </mat-card>
+      </div>
+
+      <!-- Total and invoice button-->
+      <div style="display: inline-block">
+        <!-- Total -->
+        <h1 class="total-div">Total:&nbsp;{{ total | currency }}</h1>
+      </div>
+      <!-- Invoice Button -->
+      <div>
+        <!-- <button
+          mat-raised-button
+          class="btn-primary btn-invoice"
+          (click)="getInvoice()"
+          [disabled]="invoice.getTotal() === 0"
+        >
+          Create Invoice
+        </button> -->
+      </div>
+    </div>
+  </div>
+</div>
