--- a/src/app/pages/services-list/services-list.component.html
+++ b/src/app/pages/services-list/services-list.component.html
@@ -4,7 +4,7 @@
 // Date: 23 April 2022
 // Authors: Evan Durkin, Keith Hall,
 // Gustavo Roo Gonzalez, and Gunner Bradley
-// Description: Security Questions List HTML file
+// Description: Services List HTML file
 ==================================================
 */-->
 
