--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -71,7 +71,7 @@
                 <!-- State -->
                 <mat-form-field fxFlex appearance="fill" style="margin-right: 5px; width: 66px;">
                   <mat-label>State *</mat-label>
-                  <mat-select name="state" class="form-control btn-simple"
+                  <mat-select name="state" class="form-control btn-simple" style="font-size: 14px;"
                       formControlName="state">
                         <mat-option *ngFor="let state of states" [value]="state.abbreviation">
                           {{ state.name }}
@@ -124,7 +124,7 @@
             <div style="display: inline-block; width: 100%;">
               <a routerLink="/">Return Home</a>
               <button mat-stroked-button class="btn-primary" style="float: right;" matStepperNext>Next</button>
-              <p style="display: inline-block; float: right; color: black; margin-right: 3em;">* Required Field</p>
+              <p style="display: inline-block; float: right; color: red; margin-right: 3em;">* Required Field</p>
             </div>
           </form>
         </mat-step>
