--- a/src/styles.css
+++ b/src/styles.css
@@ -329,3 +329,6 @@ color: white;
   font-family: 'Aldrich', sans-serif;
 }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
