adding edit role fixes

--- a/src/app/pages/role-list/role-list.component.html
+++ b/src/app/pages/role-list/role-list.component.html
@@ -24,7 +24,7 @@
         <ng-container matColumnDef="functions" >
           <th mat-header-cell *matHeaderCellDef>Functions</th>
           <td mat-cell *matCellDef="let element" style="width: 100px;">
-            <button mat-icon-button (click)="openRoleDetailsDialog(element._id, element.text)">
+            <button mat-icon-button (click)="openRoleDetailsDialog(element._id, element)">
               <mat-icon class="functions-icon">edit</mat-icon>
             </button>
             <button mat-icon-button (click)="delete(element._id, element.text)">
